adding user auth module

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,17 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-}
 
 html,
 body,
 #root {
   height: 100%;
   margin: 0;
+}
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+::selection {
+  @apply bg-teal-100 text-teal-700;
 }
 
 
